GPC/tests/examples/fail/wrongNamespace.gpc

GPRM::Kernel::Test a;

a = GPRM::Kernel::Blah::Blah();

int wrongNamespace() {
    return 0;
}
